--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,8 +76,10 @@ jobs:
         wget -O r2-dev.deb https://github.com/radareorg/radare2/releases/download/${R2V}/radare2-dev_${R2V}_amd64.deb
     - name: Installing Radare2
       run: sudo dpkg -i r2.deb r2-dev.deb
-    - name: Installing "The Meson Ninja"
+    - name: Installing User's Meson Ninja
       run: pip install ninja meson && ninja --version && meson --version
+    - name: Installing System's Meson Ninja
+      run: sudo pip install ninja meson && sudo ninja --version && sudo meson --version
     - name: Building r2ghidra with meson
       run: ./preconfigure && meson b && ninja -C b && sudo ninja -C b install
     - name: Testing r2ghidra oneliner
@@ -105,7 +107,7 @@ jobs:
     - name: Installing Radare2
       run: sudo dpkg -i radare2/dist/debian/*/*.deb
     - name: Building r2ghidra with cmake
-      run: ./preconfigure && cmake -B build && make -C build -j4 && sudo make -C build install
+      run: ./preconfigure && cmake -DCMAKE_INSTALL_PREFIX=/usr -B build && make -C build -j4 && sudo make -C build install
     #- name: Packaging r2ghidra for Debian
     #  run: make -C dist/debian
     - name: Testing r2ghidra oneliner
