--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,9 @@ jobs:
     - name: Installing radare2
       run: ( git clone --depth=1 https://github.com/radareorg/radare2 && cd radare2 && sys/install.sh /usr )
     - name: Building r2ghidra with acr
-      run: ./preconfigure && ./configure && make -j4 ; make user-install
+      run: |
+        ./preconfigure && ./configure && make -j4 ; make user-install
+        r2 -qc 'af;pdg' /bin/ls
     - name: Testing r2ghidra oneliner on home setup
       run: r2 -qc 'af;pdg' /bin/ls || exit 0
     - name: System-wide installation
