Refactor makefiles for more organized build steps

--- a/ghidra/Makefile
+++ b/ghidra/Makefile
@@ -1,1 +1,33 @@
-all:
+all: sleigh-build
+
+clean:
+	rm -rf ../ghidra-native ghidra/Ghidra
+
+include ../config.mk
+include deps.mk
+
+DD=$(DESTDIR)/$(R2_LIBR_PLUGINS)/r2ghidra_sleigh
+DH=$(DESTDIR)/$(R2_USER_PLUGINS)/r2ghidra_sleigh
+D?=$(DH)
+
+install uninstall:
+	$(MAKE) sleigh-install D="$(DD)"
+
+user-install:
+	$(MAKE) sleigh-install D="$(DH)"
+
+user-uninstall:
+	$(MAKE) sleigh-uninstall D="$(DH)"
+
+uninstall:
+	$(MAKE) sleigh-uninstall D="$(DD)"
+
+user-install user-uninstall:
+	$(MAKE) $<
+
+ghidra-native:
+	git clone https://github.com/radareorg/ghidra-native
+	cd ghidra-native && git checkout $(GHIDRA_NATIVE_COMMIT)
+	$(MAKE) -C ghidra-native patch
+
+.PHONY: install uninstall user-install user-uninstall all
