--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,8 +68,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Downloading Radare2 Debian packages
       run: |
-        wget -O r2.deb     https://github.com/radareorg/radare2/releases/download/${R2V}/radare2_${R2V}_amd64.deb
-        wget -O r2-dev.deb https://github.com/radareorg/radare2/releases/download/${R2V}/radare2-dev_${R2V}_amd64.deb
+        wget -O r2.deb     https://github.com/radareorg/radare2/releases/download/${{env.R2V}}/radare2_${{env.R2V}}_amd64.deb
+        wget -O r2-dev.deb https://github.com/radareorg/radare2/releases/download/${{env.R2V}}/radare2-dev_${{env.R2V}}_amd64.deb
     - name: Installing Radare2
       run: sudo dpkg -i r2.deb r2-dev.deb
     - name: Installing User's Meson Ninja
@@ -171,9 +171,9 @@ jobs:
     - name: install r2
       shell: bash
       run: |
-        python -m wget https://github.com/radareorg/radare2/releases/download/${R2V}/radare2-${R2V}-w64.zip -o r2.zip
+        python -m wget https://github.com/radareorg/radare2/releases/download/${{env.R2V}}/radare2-${{env.R2V}}-w64.zip -o r2.zip
         unzip r2.zip
-        mv radare2-${R2V} radare2
+        mv radare2-${{env.R2V}} radare2
         pwd
     - name: batmake
       shell: cmd
