--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,7 +173,7 @@ jobs:
       run: |
         python -m wget https://github.com/radareorg/radare2/releases/download/${{env.R2V}}/radare2-${{env.R2V}}-w64.zip -o r2.zip
         unzip r2.zip
-        mv radare2-${{env.R2V}} radare2
+        mv radare2-${{env.R2V}}-w64 radare2
         pwd
     - name: batmake
       shell: cmd
