Fix meson build for windows

--- a/meson.build
+++ b/meson.build
@@ -1,10 +1,10 @@
 project(
   'r2ghidra',
   ['c', 'cpp'],
-license : 'LGPL3',
-meson_version : '>=0.50.1',
-version : '5.7.0',
-default_options : ['c_std=c11', 'cpp_std=c++11']
+  license : 'LGPL3',
+  meson_version : '>=0.50.1',
+  version : '5.7.0',
+  default_options : ['c_std=c11', 'cpp_std=c++11']
 )
 
 pugixml_sources = [
@@ -26,7 +26,40 @@ r2ghidra_sources = [
   'src/SleighInstruction.cpp',
 ]
 
-r_core = dependency('r_core')
+
+incdirs = [
+  'src',
+  'third-party/pugixml/src/',
+  'ghidra-native/src/decompiler/',
+]
+
+if meson.get_compiler('cpp').get_id() == 'msvc'
+  incdirs += [
+    'radare2/include/libr',
+    'radare2/include/libr/sdb',
+  ]
+  cpp = meson.get_compiler('cpp')
+  add_global_arguments('-D_WINDOWS', language:'cpp')
+  r2libdir = [
+    meson.current_source_dir() + '\\radare2\\lib',
+    'C:\\radare2\\lib'
+  ]
+  r_core = [
+    cpp.find_library('r_core', dirs: r2libdir),
+    cpp.find_library('r_io', dirs: r2libdir),
+    cpp.find_library('r_bin', dirs: r2libdir),
+    cpp.find_library('r_cons', dirs: r2libdir),
+    cpp.find_library('r_flag', dirs: r2libdir),
+    cpp.find_library('r_reg', dirs: r2libdir),
+    cpp.find_library('r_util', dirs: r2libdir),
+    cpp.find_library('r_anal', dirs: r2libdir),
+    cpp.find_library('r_config', dirs: r2libdir),
+  ]
+else
+  r_core = dependency('r_core')
+endif
+
+r2ghidra_incdirs = include_directories(incdirs)
 
 ghidra_decompiler_sources = [
   'ghidra-native/src/decompiler/action.cc',
@@ -155,12 +188,6 @@ sleighc_sources = [
   'ghidra-native/src/decompiler/slghparse.cc',
   'ghidra-native/src/decompiler/slghscan.cc',
   ghidra_decompiler_sources,
-]
-
-r2ghidra_incdirs = [
-  'src',
-  'third-party/pugixml/src/',
-  'ghidra-native/src/decompiler/',
 ]
 
 r2ghidra_core_plugin = library('core_r2ghidra',
